argocd/applications/identity/hydra/templates/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hydra
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hydra
  ingress:
    # Gateway forwards OIDC requests (public API)
    - fromEntities:
        - cluster
        - ingress
      toPorts:
        - ports:
            - port: "4444"
              protocol: TCP
    # Intra-namespace: Kratos login/consent flows, Hydra-Maester client management
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: identity
  egress:
    # PostgreSQL database in postgres namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    # kube-apiserver access
    - toEntities:
        - kube-apiserver
    # DNS resolution
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
